--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,10 @@
     "commentend": "**/",
     "autoPrefixOnEnter": false
   },
+  "haxecheckstyle.sourceFolders": [
+    "src",
+    "test"
+  ],
   "editor.codeActionsOnSave": {
     "source.sortImports": true
   },
